Support multimedia files created for file detail page

--- a/ui/ConfigCMSData.json
+++ b/ui/ConfigCMSData.json
@@ -1,6 +1,18 @@
 {
-  "SourceFilePath": "C:\\trycms\\Batch1\\CMS_files",
-  "OutputSourceFilepath": "C:\\trycms\\Batch1\\Output_files",
+  "SourceFilePath": "C:\\cms_data\\fdp_data\\CMS_files\\",
+  "OutputSourceFilepath": "C:\\cms_data\\fdp_data\\Output_files\\",
+  "SourceFilePathForMultimedia":  "C:\\cms_data\\CmsImageData\\CMS_files\\",
+  "OutputSourceFilepathForMultimedia":  "C:\\cms_data\\CmsImageData\\Output_files\\",
+  "SourceFilePathForPageMultimedia":  "C:\\cms_data\\fdp_data\\CMS_files\\",
+  "OutputSourceFilepathForPageMultimedia":  "C:\\cms_data\\fdp_data\\Output_files\\",
+  "SourceFilePathForImage":  "C:\\cms_data\\CmsImageData\\CMS_files\\",
+  "OutputSourceFilepathForImage":  "C:\\cms_data\\CmsImageData\\Output_files\\",
+  "SourceFilePathForVideo":  "C:\\cms_data\\videos\\CMS_files\\",
+  "OutputSourceFilepathForVideo":  "C:\\cms_data\\videos\\Output_files\\",
+  "SourceFilePathForAudio":  "C:\\cms_data\\Audio\\CMS_files\\",
+  "OutputSourceFilepathForAudio":  "C:\\cms_data\\Audio\\Output_files\\",
+  "SourceFilePathForPdf":  "C:\\cms_data\\PDF\\CMS_files\\",
+  "OutputSourceFilepathForPdf":  "C:\\cms_data\\PDF\\Output_files\\",
   "CreateFilesFromDate": "2019-01-20T10:31:43",
   "CreateFilesFromDatess": "2020-01-20T10:31:43",
   "NoOfComponentCreate":"1",
@@ -12,9 +24,9 @@
     "NumberOfRandomFiles": "1",
     "NumberOfFilesNullItemURI":"1",
     "NumberOfSequencesFiles": "1",
-    "NumberOfUpdatedFiles": "5",
-    "NumberOfMissingCMSFiles": "1",
-    "NumberOfMissingOutputFiles": "1",
+    "NumberOfUpdatedFiles": "2",
+    "NumberOfMissingCMSFiles": "2",
+    "NumberOfMissingOutputFiles": "2",
     "NumberOf0kbFiles": "1",
     "CreateFilesFromDates": "2020-01-20T10:31:43"
   }
